<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/store_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">


    <ImageView
        android:id="@+id/store_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/store_image"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/store_text"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/store_name"
            android:includeFontPadding="false"
            android:text="@string/store_name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/store_content"
            android:includeFontPadding="false"
            android:text="@string/store_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>