<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!--    android:paddingTop="?attr/actionBarSize">-->

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/nav_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="?android:attr/windowBackground"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu"-->
    <!--        />-->

    <FrameLayout
        android:id="@+id/menu_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/nav_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upper_linear_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <SearchView
                        android:id="@+id/search_any"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:onClick="SearchAny">

                    </SearchView>

                    <Button
                        android:id="@+id/map_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_yellow_button"
                        android:drawableStart="@drawable/ic_map_black_24dp"
                        android:onClick="mapView"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/map_view" />

                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/home_banner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="#FFCA28">

                </HorizontalScrollView>

            </LinearLayout>

            <ScrollView
                android:id="@+id/menu_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/menu_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:columnCount="1"
                    app:orientation="vertical"
                    app:rowCount="3">


                    <LinearLayout
                        android:id="@+id/menu_row1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/menu_all"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="fill"
                            android:layout_weight="1"
                            android:background="#BFEDEDED"
                            android:contentDescription="@string/menu_all"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_eat_4461470" />

                        <ImageButton
                            android:id="@+id/menu_street"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="fill"
                            android:layout_weight="1"
                            android:background="#BFE3E2E2"
                            android:contentDescription="@string/menu_street"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_bbq_streetfood" />

                        <ImageButton
                            android:id="@+id/menu_ko"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="fill"
                            android:layout_weight="1"
                            android:background="#BFEDEDED"
                            android:contentDescription="@string/menu_ko"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_rice2" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_row2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/menu_western"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFE3E2E2"
                            android:contentDescription="@string/menu_western"
                            android:padding="15dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_pizza" />

                        <ImageButton
                            android:id="@+id/menu_ch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFEDEDED"
                            android:contentDescription="@string/menu_ch"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_noodle" />

                        <ImageButton
                            android:id="@+id/menu_jp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFE3E2E2"
                            android:contentDescription="@string/menu_jp"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_sushi2" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_row3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/menu_snack"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFEDEDED"
                            android:contentDescription="@string/menu_snack"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_onion_rings" />

                        <ImageButton
                            android:id="@+id/menu_drink"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFE3E2E2"
                            android:contentDescription="@string/menu_drink"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_drink" />

                        <ImageButton
                            android:id="@+id/menu_etc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#BFEDEDED"
                            android:contentDescription="@string/menu_etc"
                            android:padding="3dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_hamburger_1435092" />
                    </LinearLayout>

                </androidx.gridlayout.widget.GridLayout>
            </ScrollView>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>